Make sure mem.bus.is_iomem is initialized.  PR 49833